--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
       "name": "RiZoeL X Spam",
       "description": "Most Powerful And Stable Telegram Spamming Userbots",
-      "logo": "https://telegra.ph/file/db194f99e15db50f43c72.jpg",
+      "logo": "https://te.legra.ph/file/66660dd586ba763dbca66.jpg",
       "keywords": [
         "telegram",
         "telethon",
