--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
         "SpamBots"
       ],   
   "repository": "https://github.com/BROKENMAFIAOFFICIAL",
-  "website": "https://github.com/BROKENMAFIAOFFICIAL",
+  "website": "https://github.com/RizoelX",
   "success_url": "https://t.me/itzurs_lucky",
   "env": {
              "API_ID": {
